--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -86,7 +86,7 @@
 		</div>
 		<div class="mb-3">
 			<label for="text" class="form-label">Detalle</label>
-			<textarea for="text" class="formulario2" type="text"></textarea>
+			<textarea for="text" class="form-control" type="text"></textarea>
 		</div>
 		
 		
