--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -70,23 +70,23 @@
 	    
 		<div class="mb-3">
 			<label for="Name" class="form-label">Nombre</label>
-			<input type="text" class="form-control" id="formGroupExampleInput">
+			<input type="text" class="form-control" id="formInput">
 		</div>
 		<div class="mb-3">
 			<label for="Email" class="form-label">Email</label>
-			<input type="email" class="form-control" id="formGroupExampleInput2">
+			<input type="email" class="form-control" id="formInput">
 		</div>
 		<div class="mb-3">
 			<label for="Phone" class="form-label">Telefono</label>
-			<input type="email" class="form-control" id="formGroupExampleInput3">
+			<input type="email" class="form-control" id="formInput">
 		</div>
 		<div class="mb-3">
 			<label for="Text" class="form-label">Motivo de la consulta</label>
-			<input type="text" class="form-control" id="formGroupExampleInput4">
+			<input type="text" class="form-control" id="Input">
 		</div>
 		<div class="mb-3">
 			<label for="text" class="form-label">Detalle</label>
-			<textarea for="text" class="form-control" type="text"></textarea>
+			<textarea for="text" class="form-control" type="text" id="formInput"></textarea>
 		</div>
 		
 		
