--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -82,7 +82,7 @@
 		</div>
 		<div class="mb-3">
 			<label for="Text" class="form-label">Motivo de la consulta</label>
-			<input type="text" class="form-control" id="Input">
+			<input type="text" class="form-control" id="formInput">
 		</div>
 		<div class="mb-3">
 			<label for="text" class="form-label">Detalle</label>
