--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -88,8 +88,8 @@
 			<textarea for="text" class="form-control" type="text" id="formInput"></textarea>
 		</div>
 		<div class="buttons">
-			<input class="formulario3" type="submit">
-			<input class="formulario3" type="reset" value="Limpiar formulario">
+			<input class="btn btn-primary" type="submit" value="Enviar">
+			<input class="btn btn-primary" type="reset" value="Limpiar formulario">
 		</div>
 	</main>
 	<!-- cierre de formulario de contacto -->
