--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -65,9 +65,9 @@
 	    <h2 class="subtitulo1">CONTACTO</h2>
 	    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis facilis earum, vero, qui, libero quibusdam vel expedita nisi voluptatibus magni quod enim porro ipsum perspiciatis molestias nostrum dolor velit consectetur.</p>	
 	    <div>
-			<ul class="datos_contacto">
-				<li><i class="fa-solid fa-envelope"></i> EMAIL: chezotilia@gmail.com </li>
-				<li><i class="fa-brands fa-whatsapp"></i> WHATSAPP: (+54 9) 11 9999-9999 </li>
+			<ul class="lista_contacto">
+				<li class="datos_contacto"><i class="fa-solid fa-envelope"></i> EMAIL: chezotilia@gmail.com </li>
+				<li class="datos_contacto"><i class="fa-brands fa-whatsapp"></i> WHATSAPP: (+54 9) 11 9999-9999 </li>
 			</ul>
 		</div>
 	    <br>
