--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -64,7 +64,7 @@
 	<!-- formulario de contacto -->
 	    <h2 class="subtitulo1">CONTACTO</h2>
 	    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis facilis earum, vero, qui, libero quibusdam vel expedita nisi voluptatibus magni quod enim porro ipsum perspiciatis molestias nostrum dolor velit consectetur.</p>	
-	    <div>
+	    <div class="lista_contacto">
 			<ul class="lista_contacto">
 				<li class="datos_contacto"><i class="fa-solid fa-envelope"></i> EMAIL: chezotilia@gmail.com </li>
 				<li class="datos_contacto"><i class="fa-brands fa-whatsapp"></i> WHATSAPP: (+54 9) 11 9999-9999 </li>
