--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<meta property="og: url" content="">
 	<title>Chez Otilia Pasteleria Artesanal</title>
 	<link rel="icon" href="../PreEntrega_VillalbaMarina/imagenes/chez.jpg">
-	<link rel="stylesheet" type="text/css" href="../PreEntrega_VillalbaMarina/css/style.css">
+	<link rel="stylesheet" type="text/css" href="./css/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Barlow:wght@300&display=swap" rel="stylesheet">
