--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<meta property="og: image" url="">
 	<meta property="og: url" content="">
 	<title>Chez Otilia Pasteleria Artesanal</title>
-	<link rel="icon" href="../PreEntrega_VillalbaMarina/imagenes/chez.jpg">
+	<link rel="icon" href="./imagenes/chez.jpg">
 	<link rel="stylesheet" type="text/css" href="./css/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -24,8 +24,8 @@
 	<!-- inicio logo+barra nav -->
 	<nav class="navbar navbar-expand-md">
 		<div class="container-fluid">
-		  <a class="navbar-brand" href="../PreEntrega_VillalbaMarina/index.html">
-			<img class="logoppal" src="../PreEntrega_VillalbaMarina/imagenes/LogoFinal_1_ConMail.jpg">
+		  <a class="navbar-brand" href="./index.html">
+			<img class="logoppal" src="./imagenes/LogoFinal_1_ConMail.jpg">
 		  </a>
 		  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
@@ -33,19 +33,19 @@
 		  <div class="collapse navbar-collapse" id="navbarNav">
 			<ul class="navbar-nav">
 			  <li class="nav-item">
-				<a class="nav-link" aria-current="page" href="../PreEntrega_VillalbaMarina/index.html">INICIO</a>
+				<a class="nav-link" aria-current="page" href="./index.html">INICIO</a>
 			  </li>
 			  <li class="nav-item">
-				<a class="nav-link" href="../PreEntrega_VillalbaMarina/pages/tortas.html">TORTAS</a>
+				<a class="nav-link" href="./pages/tortas.html">TORTAS</a>
 			  </li>
 			  <li class="nav-item">
-				<a class="nav-link" href="../PreEntrega_VillalbaMarina/pages/cupcakes.html">CUPCAKES</a>
+				<a class="nav-link" href="./pages/cupcakes.html">CUPCAKES</a>
 			  </li>
 			  <li class="nav-item">
-				<a class="nav-link" href="../PreEntrega_VillalbaMarina/pages/recetas.html">RECETAS</a>
+				<a class="nav-link" href="./pages/recetas.html">RECETAS</a>
 			  </li>
 			  <li class="nav-item">
-				<a class="nav-link" href="../PreEntrega_VillalbaMarina/pages/contacto.html">CONTACTO</a>
+				<a class="nav-link" href="./pages/contacto.html">CONTACTO</a>
 			  </li>
 			</ul>
 		  </div>
@@ -66,9 +66,9 @@
 		    Lorem, ipsum dolor sit amet, consectetur adipisicing elit. Minus laboriosam quae, doloribus repudiandae ducimus aspernatur quia similique maxime, rem, consequatur quaerat ad quas delectus harum, ratione corporis? Reprehenderit, eligendi, recusandae.</p>
 		</div>
 		<div class="images-desktop">
-			<img class="imgindex" src="../PreEntrega_VillalbaMarina/imagenes/pasteleria1.jpg" alt="cupcakes coloridos">
-			<img class="imgindex" src="../PreEntrega_VillalbaMarina/imagenes/pasteleria2.jpg" alt="elementos y utensillos de cocina">
-			<img class="imgindex" src="../PreEntrega_VillalbaMarina/imagenes/pasteleria3.jpg" alt="porcion de torta de chocolate y porcion de torta red velvet">
+			<img class="imgindex" src="./imagenes/pasteleria1.jpg" alt="cupcakes coloridos">
+			<img class="imgindex" src="./imagenes/pasteleria2.jpg" alt="elementos y utensillos de cocina">
+			<img class="imgindex" src="./imagenes/pasteleria3.jpg" alt="porcion de torta de chocolate y porcion de torta red velvet">
 		</div>
 		<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
 			<div class="carousel-indicators">
@@ -78,13 +78,13 @@
 			</div>
 			<div class="carousel-inner">
 			  <div class="carousel-item active">
-				<img src="../PreEntrega_VillalbaMarina/imagenes/pasteleria3.jpg" class="d-block w-100" alt="porcion de torta de chocolate y porcion de torta red velvet">
+				<img src="./imagenes/pasteleria3.jpg" class="d-block w-100" alt="porcion de torta de chocolate y porcion de torta red velvet">
 			  </div>
 			  <div class="carousel-item">
-				<img src="../PreEntrega_VillalbaMarina/imagenes/pasteleria1.jpg" class="d-block w-100" alt="cupcakes coloridos">
+				<img src="./imagenes/pasteleria1.jpg" class="d-block w-100" alt="cupcakes coloridos">
 			  </div>
 			  <div class="carousel-item">
-				<img src="../PreEntrega_VillalbaMarina/imagenes/pasteleria2.jpg" class="d-block w-100" alt="elementos y utensillos de cocina">
+				<img src="./imagenes/pasteleria2.jpg" class="d-block w-100" alt="elementos y utensillos de cocina">
 			  </div>
 			</div>
 			<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
