--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 	<!-- inicio logo+barra nav -->
 	<nav class="navbar navbar-expand-md">
 		<div class="container-fluid">
-		  <a class="navbar-brand" href="./index.html">
-			<img class="logoppal" src="./imagenes/LogoFinal_1_ConMail.jpg">
+		  <a class="navbar-brand" href="../PreEntrega_VillalbaMarina/index.html">
+			<img class="logoppal" src="../PreEntrega_VillalbaMarina/imagenes/LogoFinal_1_ConMail.jpg">
 		  </a>
 		  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
@@ -33,10 +33,10 @@
 		  <div class="collapse navbar-collapse" id="navbarNav">
 			<ul class="navbar-nav">
 			  <li class="nav-item">
-				<a class="nav-link" aria-current="page" href="./index.html">INICIO</a>
+				<a class="nav-link" aria-current="page" href="../PreEntrega_VillalbaMarina/index.html">INICIO</a>
 			  </li>
 			  <li class="nav-item">
-				<a class="nav-link" href="./pages/tortas.html">TORTAS</a>
+				<a class="nav-link" href="../PreEntrega_VillalbaMarina/pages/tortas.html">TORTAS</a>
 			  </li>
 			  <li class="nav-item">
 				<a class="nav-link" href="./pages/cupcakes.html">CUPCAKES</a>
