--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 	<!-- inicio logo+barra nav -->
 	<nav class="navbar navbar-expand-md">
 		<div class="container-fluid">
-		  <a class="navbar-brand" href="../PreEntrega_VillalbaMarina/index.html">
-			<img class="logoppal" src="../PreEntrega_VillalbaMarina/imagenes/LogoFinal_1_ConMail.jpg">
+		  <a class="navbar-brand" href="index.html">
+			<img class="logoppal" src="imagenes/LogoFinal_1_ConMail.jpg">
 		  </a>
 		  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
@@ -39,13 +39,13 @@
 				<a class="nav-link" href="../PreEntrega_VillalbaMarina/pages/tortas.html">TORTAS</a>
 			  </li>
 			  <li class="nav-item">
-				<a class="nav-link" href="./pages/cupcakes.html">CUPCAKES</a>
+				<a class="nav-link" href="../PreEntrega_VillalbaMarina/pages/cupcakes.html">CUPCAKES</a>
 			  </li>
 			  <li class="nav-item">
-				<a class="nav-link" href="./pages/recetas.html">RECETAS</a>
+				<a class="nav-link" href="../PreEntrega_VillalbaMarina/pages/recetas.html">RECETAS</a>
 			  </li>
 			  <li class="nav-item">
-				<a class="nav-link" href="./pages/contacto.html">CONTACTO</a>
+				<a class="nav-link" href="../PreEntrega_VillalbaMarina/pages/contacto.html">CONTACTO</a>
 			  </li>
 			</ul>
 		  </div>
@@ -66,7 +66,7 @@
 		    Lorem, ipsum dolor sit amet, consectetur adipisicing elit. Minus laboriosam quae, doloribus repudiandae ducimus aspernatur quia similique maxime, rem, consequatur quaerat ad quas delectus harum, ratione corporis? Reprehenderit, eligendi, recusandae.</p>
 		</div>
 		<div class="images-desktop">
-			<img class="imgindex" src="./imagenes/pasteleria1.jpg" alt="cupcakes coloridos">
+			<img class="imgindex" src="../PreEntrega_VillalbaMarina/imagenes/pasteleria1.jpg" alt="cupcakes coloridos">
 			<img class="imgindex" src="./imagenes/pasteleria2.jpg" alt="elementos y utensillos de cocina">
 			<img class="imgindex" src="./imagenes/pasteleria3.jpg" alt="porcion de torta de chocolate y porcion de torta red velvet">
 		</div>
