cards con bootstrap en pagina cupcakes

--- a/pages/cupcakes.html
+++ b/pages/cupcakes.html
@@ -67,31 +67,59 @@
 
 		<!-- descriptivo de cupcakes -->
 		<h2 class="subtitulo1">CUPCAKES</h2>
-		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis facilis earum, vero, qui, libero quibusdam
-			vel expedita nisi voluptatibus magni quod enim porro ipsum perspiciatis molestias nostrum dolor velit
-			consectetur.</p>
-		<div class="cupcakes">
-			<img class="img-cupcakes" src="../imagenes/cupchoco.jpg"
-				alt="cupcake de chocolate con buttercream de chocolate">
-			<span>CUPCAKE DE CHOCOLATE Lorem, ipsum dolor sit amet consectetur adipisicing, elit. Consequuntur,
-				voluptate repellendus tempora architecto velit.</span>
-		</div>
-		<div class="cupcakes">
-			<img class="img-cupcakes" src="../imagenes/cupvainilla.jpg"
-				alt="cupcake de vainilla con buttercream de vainilla">
-			<span>CUPCAKE DE VAINILLA Lorem, ipsum dolor sit amet consectetur adipisicing, elit. Consequuntur, voluptate
-				repellendus tempora architecto velit.</span>
-		</div>
-		<div class="cupcakes">
-			<img class="img-cupcakes" src="../imagenes/cuplimon.jpg" alt="cupcake de limon">
-			<span>CUPCAKE DE LIMON Lorem, ipsum dolor sit amet consectetur adipisicing, elit. Consequuntur, voluptate
-				repellendus tempora architecto velit.</span>
-		</div>
-		<div class="cupcakes">
-			<img class="img-cupcakes" src="../imagenes/redvelvet.jpg"
-				alt="cupcake red velvet con buttercream de queso crema">
-			<span>CUPCAKE RED VELVET Lorem, ipsum dolor sit amet consectetur adipisicing, elit. Consequuntur, voluptate
-				repellendus tempora architecto velit.</span>
+		<p>Nuestros cupcakes son de elaboracion totalmente casera, con recetas deliciosas que te van a dejar siempre con
+			ganas de más. Probá nuestras cuatro variedades mas pedidas: chocolate, vainilla, limón y red velvet, con
+			exquisitos buttercreams. Contamos con la posibilidad de armar tu pedido a medida, no dejes de consultarnos.
+		</p>
+		<div class="row row-cols-1 row-cols-md-2 g-4" style="margin:10px;">
+			<div class="col">
+				<div class="card">
+					<img src="../imagenes/cupchoco.jpg" class="card-img-top"
+						alt="cupcake de chocolate con buttercream de chocolate">
+					<div class="card-body" style="">
+						<h5 class="card-title" style="text-align:center">CUPCAKE DE CHOCOLATE</h5>
+						<p class="card-text">Delicioso cupcake de intenso chocolate, decorado con buttercream a base de
+							chocolate.</p>
+						<a href="#" class="btn btn-primary">Comprar</a>
+					</div>
+				</div>
+			</div>
+			<div class="col">
+				<div class="card">
+					<img src="../imagenes/cupvainilla.jpg" class="card-img-top"
+						alt="cupcake de vainilla con buttercream de vainilla">
+					<div class="card-body">
+						<h5 class="card-title" style="text-align:center">CUPCAKE DE VAINILLA</h5>
+						<p class="card-text">Nuestro clásico cupcake de vainilla, con una sencilla pero deliciosa
+							buttercream de vainilla.</p>
+						<a href="#" class="btn btn-primary">Comprar</a>
+					</div>
+				</div>
+			</div>
+			<div class="col">
+				<div class="card">
+					<img src="../imagenes/cuplimon.jpg" class="card-img-top"
+						alt="cupcake de limon con buttercream de vainilla">
+					<div class="card-body">
+						<h5 class="card-title" style="text-align:center">CUPCAKE DE LIMON</h5>
+						<p class="card-text">Cupcake con base de limón combinado con buttercream de vainilla.
+							Opcionalmente se puede combinar con relleno de arandanos o buttercream de limón.</p>
+						<a href="#" class="btn btn-primary">Comprar</a>
+					</div>
+				</div>
+			</div>
+			<div class="col">
+				<div class="card">
+					<img src="../imagenes/redvelvet.jpg" class="card-img-top"
+						alt="cupcake red velvet con buttercream de queso crema">
+					<div class="card-body">
+						<h5 class="card-title" style="text-align:center">CUPCAKE RED VELVET</h5>
+						<p class="card-text">Exquisito cupcake de red velvet decorado con buttercream a base de queso
+							crema.</p>
+						<a href="#" class="btn btn-primary">Comprar</a>
+					</div>
+				</div>
+			</div>
 		</div>
 	</main>
 	<!-- cierre descriptivo de cupcakes -->
