agregue cards en page cupcakes

--- a/pages/cupcakes.html
+++ b/pages/cupcakes.html
@@ -26,36 +26,38 @@
 
 <body>
 	<!-- inicio logo+barra nav -->
-	<nav class="navbar navbar-expand-md">
-		<div class="container-fluid">
-			<a class="navbar-brand" href="../index.html">
-				<img class="logoppal" src="../imagenes/logo_final.jpg" alt="logo chez otilia">
-			</a>
-			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-				aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-			</button>
-			<div class="collapse navbar-collapse" id="navbarNav">
-				<ul class="navbar-nav">
-					<li class="nav-item">
-						<a class="nav-link" aria-current="page" href="../index.html">INICIO</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="../pages/tortas.html">TORTAS</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="../pages/cupcakes.html">CUPCAKES</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="../pages/recetas.html">RECETAS</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="../pages/contacto.html">CONTACTO</a>
-					</li>
-				</ul>
+	<header>
+		<nav class="navbar navbar-expand-md">
+			<div class="container-fluid">
+				<a class="navbar-brand" href="../index.html">
+					<img class="logoppal" src="../imagenes/logo_final.jpg" alt="logo chez otilia">
+				</a>
+				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+					aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarNav">
+					<ul class="navbar-nav">
+						<li class="nav-item">
+							<a class="nav-link" aria-current="page" href="../index.html">INICIO</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="../pages/tortas.html">TORTAS</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="../pages/cupcakes.html">CUPCAKES</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="../pages/recetas.html">RECETAS</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="../pages/contacto.html">CONTACTO</a>
+						</li>
+					</ul>
+				</div>
 			</div>
-		</div>
-	</nav>
+		</nav>
+	</header>
 	<!-- cierre fila de logo+barra nav -->
 	<!-- titulos -->
 	<main>
@@ -76,23 +78,25 @@
 				<div class="card">
 					<img src="../imagenes/cupchoco.jpg" class="card-img-top"
 						alt="cupcake de chocolate con buttercream de chocolate">
-					<div class="card-body" style="">
-						<h5 class="card-title" style="text-align:center">CUPCAKE DE CHOCOLATE</h5>
-						<p class="card-text">Delicioso cupcake de intenso chocolate, decorado con buttercream a base de
+					<div class="card-body" style="text-align: center">
+						<h5 class="card-title">CUPCAKE DE CHOCOLATE</h5>
+						<p class="card-text text-wrap text-center" style="width:auto">Delicioso cupcake de intenso
+							chocolate, decorado con buttercream a base de
 							chocolate.</p>
-						<a href="#" class="btn btn-primary">Comprar</a>
+						<a href="#" class="btn btn-primary" style="background-color:rebeccapurple">Comprar</a>
 					</div>
 				</div>
 			</div>
 			<div class="col">
 				<div class="card">
 					<img src="../imagenes/cupvainilla.jpg" class="card-img-top"
-						alt="cupcake de vainilla con buttercream de vainilla">
-					<div class="card-body">
-						<h5 class="card-title" style="text-align:center">CUPCAKE DE VAINILLA</h5>
-						<p class="card-text">Nuestro clásico cupcake de vainilla, con una sencilla pero deliciosa
+						alt="cupcake de vainilla con buttercream de vainilla" style="height:auto">
+					<div class="card-body" style="text-align: center">
+						<h5 class="card-title">CUPCAKE DE VAINILLA</h5>
+						<p class="card-text text-wrap text-center" style="width:auto">Nuestro clásico cupcake de
+							vainilla, con una sencilla pero deliciosa
 							buttercream de vainilla.</p>
-						<a href="#" class="btn btn-primary">Comprar</a>
+						<a href="#" class="btn btn-primary" style="background-color:rebeccapurple">Comprar</a>
 					</div>
 				</div>
 			</div>
@@ -100,11 +104,12 @@
 				<div class="card">
 					<img src="../imagenes/cuplimon.jpg" class="card-img-top"
 						alt="cupcake de limon con buttercream de vainilla">
-					<div class="card-body">
-						<h5 class="card-title" style="text-align:center">CUPCAKE DE LIMON</h5>
-						<p class="card-text">Cupcake con base de limón combinado con buttercream de vainilla.
+					<div class="card-body" style="text-align: center">
+						<h5 class="card-title">CUPCAKE DE LIMON</h5>
+						<p class="card-text text-wrap text-center" style="width:auto">Cupcake con base de limón
+							combinado con buttercream de vainilla.
 							Opcionalmente se puede combinar con relleno de arandanos o buttercream de limón.</p>
-						<a href="#" class="btn btn-primary">Comprar</a>
+						<a href="#" class="btn btn-primary" style="background-color:rebeccapurple">Comprar</a>
 					</div>
 				</div>
 			</div>
@@ -112,11 +117,12 @@
 				<div class="card">
 					<img src="../imagenes/redvelvet.jpg" class="card-img-top"
 						alt="cupcake red velvet con buttercream de queso crema">
-					<div class="card-body">
-						<h5 class="card-title" style="text-align:center">CUPCAKE RED VELVET</h5>
-						<p class="card-text">Exquisito cupcake de red velvet decorado con buttercream a base de queso
+					<div class="card-body" style="text-align: center">
+						<h5 class="card-title">CUPCAKE RED VELVET</h5>
+						<p class="card-text text-wrap text-center" style="width:auto">Exquisito cupcake de red velvet
+							decorado con buttercream a base de queso
 							crema.</p>
-						<a href="#" class="btn btn-primary">Comprar</a>
+						<a href="#" class="btn btn-primary" style="background-color:rebeccapurple">Comprar</a>
 					</div>
 				</div>
 			</div>
