agregue cards a page tortas

--- a/pages/cupcakes.html
+++ b/pages/cupcakes.html
@@ -75,54 +75,54 @@
 		</p>
 		<div class="row row-cols-1 row-cols-md-2 g-4" style="margin:10px;">
 			<div class="col">
-				<div class="card">
+				<div class="card h-100">
 					<img src="../imagenes/cupchoco.jpg" class="card-img-top"
 						alt="cupcake de chocolate con buttercream de chocolate">
-					<div class="card-body" style="text-align: center">
+					<div class="card-body">
 						<h5 class="card-title">CUPCAKE DE CHOCOLATE</h5>
-						<p class="card-text text-wrap text-center" style="width:auto">Delicioso cupcake de intenso
+						<p class="card-text text-wrap text-center">Delicioso cupcake de intenso
 							chocolate, decorado con buttercream a base de
 							chocolate.</p>
-						<a href="#" class="btn btn-primary" style="background-color:rebeccapurple">Comprar</a>
+						<a href="#" class="btn btn-primary">Comprar</a>
 					</div>
 				</div>
 			</div>
 			<div class="col">
-				<div class="card">
+				<div class="card h-100">
 					<img src="../imagenes/cupvainilla.jpg" class="card-img-top"
-						alt="cupcake de vainilla con buttercream de vainilla" style="height:auto">
-					<div class="card-body" style="text-align: center">
+						alt="cupcake de vainilla con buttercream de vainilla">
+					<div class="card-body">
 						<h5 class="card-title">CUPCAKE DE VAINILLA</h5>
-						<p class="card-text text-wrap text-center" style="width:auto">Nuestro clásico cupcake de
+						<p class="card-text text-wrap text-center">Nuestro clásico cupcake de
 							vainilla, con una sencilla pero deliciosa
 							buttercream de vainilla.</p>
-						<a href="#" class="btn btn-primary" style="background-color:rebeccapurple">Comprar</a>
+						<a href="#" class="btn btn-primary">Comprar</a>
 					</div>
 				</div>
 			</div>
 			<div class="col">
-				<div class="card">
+				<div class="card h-100">
 					<img src="../imagenes/cuplimon.jpg" class="card-img-top"
 						alt="cupcake de limon con buttercream de vainilla">
-					<div class="card-body" style="text-align: center">
+					<div class="card-body">
 						<h5 class="card-title">CUPCAKE DE LIMON</h5>
-						<p class="card-text text-wrap text-center" style="width:auto">Cupcake con base de limón
+						<p class="card-text text-wrap text-center">Cupcake con base de limón
 							combinado con buttercream de vainilla.
 							Opcionalmente se puede combinar con relleno de arandanos o buttercream de limón.</p>
-						<a href="#" class="btn btn-primary" style="background-color:rebeccapurple">Comprar</a>
+						<a href="#" class="btn btn-primary">Comprar</a>
 					</div>
 				</div>
 			</div>
 			<div class="col">
-				<div class="card">
+				<div class="card h-100">
 					<img src="../imagenes/redvelvet.jpg" class="card-img-top"
 						alt="cupcake red velvet con buttercream de queso crema">
-					<div class="card-body" style="text-align: center">
+					<div class="card-body">
 						<h5 class="card-title">CUPCAKE RED VELVET</h5>
-						<p class="card-text text-wrap text-center" style="width:auto">Exquisito cupcake de red velvet
+						<p class="card-text text-wrap text-center">Exquisito cupcake de red velvet
 							decorado con buttercream a base de queso
 							crema.</p>
-						<a href="#" class="btn btn-primary" style="background-color:rebeccapurple">Comprar</a>
+						<a href="#" class="btn btn-primary">Comprar</a>
 					</div>
 				</div>
 			</div>
