--- a/pages/tortas.html
+++ b/pages/tortas.html
@@ -26,36 +26,38 @@
 
 <body>
 	<!-- inicio logo+barra nav -->
-	<nav class="navbar navbar-expand-md">
-		<div class="container-fluid">
-			<a class="navbar-brand" href="../index.html">
-				<img class="logoppal" src="../imagenes/logo_final.jpg" alt="logo chez otilia">
-			</a>
-			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-				aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-			</button>
-			<div class="collapse navbar-collapse" id="navbarNav">
-				<ul class="navbar-nav">
-					<li class="nav-item">
-						<a class="nav-link" aria-current="page" href="../index.html">INICIO</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="../pages/tortas.html">TORTAS</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="../pages/cupcakes.html">CUPCAKES</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="../pages/recetas.html">RECETAS</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="../pages/contacto.html">CONTACTO</a>
-					</li>
-				</ul>
+	<header>
+		<nav class="navbar navbar-expand-md">
+			<div class="container-fluid">
+				<a class="navbar-brand" href="../index.html">
+					<img class="logoppal" src="../imagenes/logo_final.jpg" alt="logo chez otilia">
+				</a>
+				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+					aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarNav">
+					<ul class="navbar-nav">
+						<li class="nav-item">
+							<a class="nav-link" aria-current="page" href="../index.html">INICIO</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="../pages/tortas.html">TORTAS</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="../pages/cupcakes.html">CUPCAKES</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="../pages/recetas.html">RECETAS</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="../pages/contacto.html">CONTACTO</a>
+						</li>
+					</ul>
+				</div>
 			</div>
-		</div>
-	</nav>
+		</nav>
+	</header>
 	<!-- cierre fila de logo+barra nav -->
 	<!-- titulos -->
 	<main>
@@ -67,12 +69,100 @@
 
 		<!-- descriptivo de tortas -->
 		<h2 class="subtitulo1">TORTAS</h2>
-		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio dolorem atque vero nam ducimus perspiciatis
-			earum dolorum cum, illo sunt in magnam natus sint, optio nemo. Aut corrupti dolore possimus. Lorem ipsum
-			dolor sit amet consectetur adipisicing, elit. Et repellat hic blanditiis aliquid tempora, doloremque
-			dignissimos vero ducimus recusandae, nostrum corrupti quo incidunt necessitatibus nulla iste neque autem ab,
-			optio.</p>
-		<div class="tortas">
+		<p>Las más ricas tortas, con un toque casero y abundante, elaboración fresca y a pedido. Tenés muchas variedades para tentarte, pero tambien podes pedirnos algo especial para un festejo único. Los encargos deben hacerse con anticipación ya que trabajamos sobre pedido, te invitamos a probarlas y tentarte.</p>
+		<div class="row row-cols-1 row-cols-md-3 g-4" style="margin:10px">
+			<div class="col">
+				<div class="card h-100">
+					<img src="../imagenes/brownie.jpg" class="card-img-top" alt="torta brownie con dulce de leche y merengue">
+					<div class="card-body">
+						<h5 class="card-title">TORTA BROWNIE</h5>
+						<p class="card-text text-wrap text-center">Humedo y delicioso brownie con nueces como base, una generosa capa de dulce de leche repostero y merengue italiano para culminar.</p>
+						<a href="#" class="btn btn-primary">Comprar</a>
+					</div>
+				</div>
+			</div>
+			<div class="col">
+				<div class="card h-100">
+					<img src="../imagenes/cheesecakechoco.jpg" class="card-img-top" alt="cheesecake de chocolate">
+					<div class="card-body">
+						<h5 class="card-title">CHEESECAKE DE CHOCOLATE</h5>
+						<p class="card-text text-wrap text-center">Base de galletitas de chocolate, sobre la cual armamos una deliciosa y fresca cheesecake con chocolate amargo.</p>
+						<a href="#" class="btn btn-primary">Comprar</a>
+					</div>
+				</div>
+			</div>
+			<div class="col">
+				<div class="card h-100">
+					<img src="../imagenes/cheesecakefrutos.jpg" class="card-img-top" alt="cheesecake clasica con frutos rojos">
+					<div class="card-body">
+						<h5 class="card-title">CHEESECAKE CON FRUTOS ROJOS</h5>
+						<p class="card-text text-wrap text-center">Clásico cheesecake, con base de galletitas y deliciosamente combinado con frutos rojos de estación.</p>
+						<a href="#" class="btn btn-primary">Comprar</a>
+					</div>
+				</div>
+			</div>
+			<div class="col">
+				<div class="card h-100">
+					<img src="../imagenes/chocotorta.jpg" class="card-img-top" alt="chocotorta">
+					<div class="card-body">
+						<h5 class="card-title">CHOCOTORTA</h5>
+						<p class="card-text text-wrap text-center">Unica e irremplazable chocotorta, con las galletitas que amamos y la deliciosa crema chocotorta.</p>
+						<a href="#" class="btn btn-primary">Comprar</a>
+					</div>
+				</div>
+			</div>
+			<div class="col">
+				<div class="card h-100">
+					<img src="../imagenes/lemonpie.jpg" class="card-img-top" alt="torta lemon pie">
+					<div class="card-body">
+						<h5 class="card-title">LEMON PIE</h5>
+						<p class="card-text text-wrap text-center">Fresco y clásico, base de delicada masa sablé, relleno cremoso de limón y merengue italiano para completar.</p>
+						<a href="#" class="btn btn-primary">Comprar</a>
+					</div>
+				</div>
+			</div>
+			<div class="col">
+				<div class="card h-100">
+					<img src="../imagenes/manzana.jpg" class="card-img-top" alt="crumble de manzana">
+					<div class="card-body">
+						<h5 class="card-title">CRUMBLE DE MANZANA</h5>
+						<p class="card-text text-wrap text-center">Base de masa sablé, relleno suave y delicioso de manzana, con leve perfume de especias, coronado con el más crocante crumble.</p>
+						<a href="#" class="btn btn-primary">Comprar</a>
+					</div>
+				</div>
+			</div>
+			<div class="col">
+				<div class="card h-100">
+					<img src="../imagenes/moussefrutilla.jpg" class="card-img-top" alt="torta mousse de frutilla">
+					<div class="card-body">
+						<h5 class="card-title">MOUSSE DE FRUTILLA</h5>
+						<p class="card-text text-wrap text-center">Fresca y riquisima mousse de frutilla, sobre base de galletitas de chocolate.</p>
+						<a href="#" class="btn btn-primary">Comprar</a>
+					</div>
+				</div>
+			</div>
+			<div class="col">
+				<div class="card h-100">
+					<img src="../imagenes/rogel.jpg" class="card-img-top" alt="torta mil hojas de dulce de lecha">
+					<div class="card-body">
+						<h5 class="card-title">TORTA ROGEL</h5>
+						<p class="card-text text-wrap text-center">El clásico rogel, capas y capas de crocante hojaldre, unidas por el más rico dulce de leche repostero, terminación con merengue italiano.</p>
+						<a href="#" class="btn btn-primary">Comprar</a>
+					</div>
+				</div>
+			</div>
+		</div>
+
+
+
+
+
+
+
+
+
+
+		<!--	<div class="tortas">
 			<div class="info-tortas">
 				<img class="img-tortas" src="../imagenes/cheesecakefrutos.jpg" alt="cheesecake de frutos rojos">
 				<span class="descrip-tortas">CHEESECAKE DE FRUTOS ROJOS Lorem ipsum dolor sit amet, consectetur
@@ -117,7 +207,8 @@
 				<span class="descrip-tortas">TORTA ROGEL Lorem ipsum dolor sit amet, consectetur adipisicing elit.
 					Magnam quam, laboriosam doloremque eligendi numquam omnis, rem incidunt doloribus quaerat.</span>
 			</div>
-		</div>
+		</div> -->
+
 	</main>
 	<!-- cierre descriptivo de tortas -->
 	<br>
