agregue contenido real

--- a/index.html
+++ b/index.html
@@ -68,12 +68,7 @@
 		<!-- cierre titulos -->
 		<!-- info general y presentacion -->
 		<div class="infoindex">
-			<p class="infoindex-p">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt, dignissimos rerum
-				fugiat ab vel. Ullam placeat praesentium doloremque delectus, id laudantium tempore necessitatibus optio
-				dolore esse veritatis consequuntur aut.
-				Lorem, ipsum dolor sit amet, consectetur adipisicing elit. Minus laboriosam quae, doloribus repudiandae
-				ducimus aspernatur quia similique maxime, rem, consequatur quaerat ad quas delectus harum, ratione
-				corporis? Reprehenderit, eligendi, recusandae.</p>
+			<p class="infoindex-p"> Bienvenidos a nuestro sitio web! Somos un emprendimiento familiar de pastelería artesanal, todo lo que hacemos es casero, fresco y con mucho amor. Trabajamos a pedido, por lo que podemos customizar tus tortas y cupcakes segun la ocasión. Usamos los ingredientes mas frescos y ricos, y le ponemos mucho cariño a todo lo que preparamos. Te invitamos a conocer nuestros productos!</p>
 		</div>
 		<div class="images-desktop">
 			<img class="imgindex" src="imagenes/pasteleria1.jpg" alt="cupcakes coloridos">
