--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -69,41 +69,44 @@
 
 		<!-- formulario de contacto -->
 		<h2 class="subtitulo1">CONTACTO</h2>
-		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis facilis earum, vero, qui, libero quibusdam
-			vel expedita nisi voluptatibus magni quod enim porro ipsum perspiciatis molestias nostrum dolor velit
-			consectetur.</p>
+		<p>Podés visitarnos en nuestras pagina de facebook e instagram para enterarte de las ultimas novedades,
+			escribirnos al mail o enviarnos un whatsapp. También dejarnos tus datos e inquietudes a través del
+			formulario debajo, para hacernos las consultas que desees, nos pondremos en contacto lo antes posible.</p>
 		<div class="lista_c">
 			<ul class="lista_contacto">
 				<li class="datos_contacto"><i class="fa-solid fa-envelope"></i> EMAIL: chezotilia@gmail.com </li>
 				<li class="datos_contacto"><i class="fa-brands fa-whatsapp"></i> WHATSAPP: (+54 9) 11 9999-9999 </li>
+				<li class="datos_contacto"><i class="fa-brands fa-instagram"></i> @chezotilia </li>
+				<li class="datos_contacto"><i class="fa-brands fa-facebook"></i> facebook.com/chezotilia </li>
 			</ul>
 		</div>
 		<br>
-		<br>
-		<div class="mb-3">
-			<label for="Name" class="form-label">Nombre</label>
-			<input type="text" class="form-control" id="formInput">
-		</div>
-		<div class="mb-3">
-			<label for="Email" class="form-label">Email</label>
-			<input type="email" class="form-control" id="formInput">
-		</div>
-		<div class="mb-3">
-			<label for="Phone" class="form-label">Telefono</label>
-			<input type="email" class="form-control" id="formInput">
-		</div>
-		<div class="mb-3">
-			<label for="Text" class="form-label">Motivo de la consulta</label>
-			<input type="text" class="form-control" id="formInput">
-		</div>
-		<div class="mb-3">
-			<label for="text" class="form-label">Detalle</label>
-			<textarea for="text" class="form-control" type="text" id="formInput"></textarea>
-		</div>
-		<div class="buttons">
-			<input class="btn btn-primary" type="submit" value="Enviar" style="background-color:rebeccapurple">
-			<input class="btn btn-primary" type="reset" value="Limpiar formulario"
-				style="background-color:rebeccapurple">
+		<div class="formulario">
+			<div class="mb-3">
+				<label for="Name" class="form-label">Nombre</label>
+				<input type="text" class="form-control" id="formInput">
+			</div>
+			<div class="mb-3">
+				<label for="Email" class="form-label">Email</label>
+				<input type="email" class="form-control" id="formInput">
+			</div>
+			<div class="mb-3">
+				<label for="Phone" class="form-label">Telefono</label>
+				<input type="email" class="form-control" id="formInput">
+			</div>
+			<div class="mb-3">
+				<label for="Text" class="form-label">Motivo de la consulta</label>
+				<input type="text" class="form-control" id="formInput">
+			</div>
+			<div class="mb-3">
+				<label for="text" class="form-label">Detalle</label>
+				<textarea for="text" class="form-control" type="text" id="formInput"></textarea>
+			</div>
+			<div class="buttons">
+				<input class="btn btn-primary" type="submit" value="Enviar" style="background-color:rebeccapurple">
+				<input class="btn btn-primary" type="reset" value="Limpiar formulario"
+					style="background-color:rebeccapurple">
+			</div>
 		</div>
 	</main>
 	<!-- cierre de formulario de contacto -->
