--- a/pages/recetas.html
+++ b/pages/recetas.html
@@ -69,9 +69,7 @@
 
 		<!-- info recetas -->
 		<h2 class="subtitulo1">RECETAS</h2>
-		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis facilis earum, vero, qui, libero quibusdam
-			vel expedita nisi voluptatibus magni quod enim porro ipsum perspiciatis molestias nostrum dolor velit
-			consectetur.</p>
+		<p>A poner manos en la masa! La cocina es divertida y terapeutica, te invitamos a realizar distintas recetas de delicias dulces. Las recetas que vas a encontrar debajo son nuestras preferidas, te animás a probarlas?</p>
 		<div class="recetas">
 			<div class="videos">
 				<iframe class="links_recetas" src="https://www.youtube.com/embed/mPGhzgY-gLU"
