--- a/pages/tortas.html
+++ b/pages/tortas.html
@@ -53,6 +53,9 @@
 						<li class="nav-item">
 							<a class="nav-link" href="../pages/contacto.html">CONTACTO</a>
 						</li>
+						<li class="nav-item">
+							<a class="nav-link" href=""><span class="fa-solid fa-cart-shopping"></span></a>
+						</li>
 					</ul>
 				</div>
 			</div>
